# ws_ctrl_ws

doc/: debug_log.md
src/: DeviceParam.json
src/b2_manual_ctrl/: CMakeLists.txt  package.xml
src/b2_manual_ctrl/launch/: b2_manual_ctrl.launch.py
src/b2_manual_ctrl/src/: b2_sport_ctrl_node.cpp  motor_ctrl_2_twist.cpp
src/ctrl_manager/: CMakeLists.txt  package.xml
src/ctrl_manager/include/ctrl_manager/: ctrl_manager.h
src/ctrl_manager/src/: ctrl_manager.cpp  ctrl_manager_node.cpp
src/info_manager/: CMakeLists.txt  package.xml
src/info_manager/include/info_manager/: info_manager.h
src/info_manager/src/: info_manager.cpp  info_manager_node.cpp
src/manager/: CMakeLists.txt  package.xml
src/manager/include/manager/: ctrl_manager.h  ws_msg_manager.h
src/manager/src/: ctrl_manager.cpp  ctrl_manager_node.cpp  ws_msgs_manager.cpp  ws_msgs_manager_node.cpp
src/robot_msgs/: CMakeLists.txt  package.xml
src/robot_msgs/msg/: ArmCtrl.msg  BunkerStatus.msg  ExtendDevCtrl.msg  HeartbeatBag.msg  InspectTaskExecutionComplete.msg  InspectTaskExecutionStart.msg  InspectTaskInfoSimple.msg  InspectTaskInstance.msg  InspectTaskPlan.msg  LiftCtrl.msg  LightCtrl.msg  MonitorImgDataCollectCmd.msg  MonitorImgDataCollectSend.msg  MonitorTaskDataUpload.msg  MotorCtrlNormal.msg  MotorCtrltoPos.msg  Robot2TurnoutRequest.msg  RobotBatteryStatus.msg  RobotRuntimePosition.msg  TrackRobotRuntimeMoveStatus.msg
src/robot_msgs/srv/: ArmCtrlSrv.srv  ArmPosQuery.srv  AvoidObstaclesStartTask.srv  BatteryChargeExecuteProgram.srv  BatteryChargeNav.srv  BatteryChargePauseTask.srv  BatteryChargeStartTask.srv  ChangeCtrlModeCmd.srv  CtrlModeQuery.srv  ExtendDevCtrlSrv.srv  InspectTaskCtrlCmd.srv  InspectTaskInfoConfigureCmd.srv  InspectTaskInfoDeleteCmd.srv  InspectTaskInfoDetailQuery.srv  InspectTaskInfoListQuery.srv  InspectTaskInstanceQuery.srv  InspectTaskPlanAddCmd.srv  InspectTaskPlanDeleteCmd.srv  InspectTaskPlanListQuery.srv  LiftCtrlSrv.srv  LiftPosQuery.srv  ModeChangePauseTask.srv  ModeChangeStartTask.srv  MonitorCollectDataResend.srv  MonitorSensorDataCollectCmd.srv  MonitorTaskDataReupload.srv  MotorCtrltoPosSrv.srv  RobotInfoQuery.srv  SystemTimeSyncCmd.srv  TaskDataCollectSrv.srv  TaskExecuteStatusQuery.srv  TaskStartOrFinishResponse.srv
src/task_manager/: CMakeLists.txt  package.xml
src/task_manager/include/task_manager/: cron_analyse.h  task_execute.h  task_file_manager.h  task_manager.h
src/task_manager/src/: cron_analyse.cpp  task_execute.cpp  task_file_manager.cpp  task_manager.cpp  task_manager_node.cpp
src/task_manager/task_files/monitor_points_files/: 470_track_01_001m_p01.json  470_track_01_001m_p02.json  470_track_01_001m_p03.json  470_track_01_001m_p04.json  470_track_01_001m_p05.json  470_track_01_001m_p06.json  470_track_01_001m_p07.json  470_track_01_001m_p08.json  470_track_01_001m_p09.json  470_track_01_001m_p10.json  470_track_01_001m_p11.json  470_track_01_001m_p12.json  470_track_01_002m_p01.json  470_track_01_002m_p02.json  470_track_01_002m_p03.json  470_track_01_002m_p04.json  470_track_01_002m_p05.json  470_track_01_002m_p06.json  470_track_01_002m_p07.json  470_track_01_002m_p08.json  470_track_01_002m_p09.json  470_track_01_002m_p10.json  470_track_01_002m_p11.json  470_track_01_002m_p12.json  470_track_01_003m_p01.json  470_track_01_003m_p02.json  470_track_01_003m_p03.json  470_track_01_003m_p04.json  470_track_01_003m_p05.json  470_track_01_003m_p06.json  470_track_01_003m_p07.json  470_track_01_003m_p08.json  470_track_01_003m_p09.json  470_track_01_003m_p10.json  470_track_01_003m_p11.json  470_track_01_003m_p12.json  470_track_01_004m_p01.json  470_track_01_004m_p02.json  470_track_01_004m_p03.json  470_track_01_004m_p04.json  (+8471 more)
src/task_manager/task_files/task_info_files/: TaskInfoIndex.json
src/task_manager/task_files/task_info_files/e_inspect_all/: 7E470570-739E-1882-A842-22FF9AE310CD.json  AEB4C707-294A-8233-6351-4B92CCF3A8E1.json  B3386A81-FFE9-BE71-43C4-73B7EF824F2C.json  E0894256-C9FB-79CD-B246-5D8E3836F51C.json  E8D13C48-4EA1-9FA8-9317-6FC36B7E82CE.json  E8E718DE-1A33-6D17-A79C-36602B870BC2.json
src/task_manager/task_files/task_instance_files/: TaskInstanceIndex.json
src/task_manager/task_files/task_plan_files/: TaskPlanIndex.json
src/task_manager/task_files/task_plan_files/e_plan_fixed/: 8F6E7144-62A8-BA57-0099-898F5709A8E9.json  D5F45263-811A-C625-B2EB-1815CADD14BE.json
src/test_pkg/: CMakeLists.txt  package.xml
src/test_pkg/include/test_pkg/: test_ctrl_manager.h  test_task_manager.h
src/test_pkg/src/: test_ctrl_manager.cpp  test_ctrl_manager_node.cpp  test_task_manager.cpp  test_task_manager_node.cpp
src/web_socket/: CMakeLists.txt  package.xml
src/web_socket/include/web_socket/: websocket.h  ws_msg_manager.h  ws_msgs_manager.h
src/web_socket/src/: websocket.cpp  ws_msgs_manager.cpp  ws_msgs_manager_node.cpp
src/websocket/: CMakeLists.txt  package.xml
src/websocket/include/websocket/: ctrl_manager.h  websocket.h  ws_msg_manage.h  ws_msg_manager.h
src/websocket/src/: ctrl_manager.cpp  websocket.cpp  websocket_node.cpp  ws_msg_manage_client.cpp  ws_msg_manage_client_node.cpp  ws_msgs_manage_client.cpp  ws_msgs_manage_client_node.cpp  ws_msgs_manage_server.cpp  ws_msgs_manage_server_node.cpp  ws_msgs_manager.cpp
